src/objects/TestCase__c.object
<CustomObject>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <inlineHelpText>System action or state that indicates a successful test case.</inlineHelpText>
        <label>Expected Result</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Next_Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If a case needs to be completed after testing this one, enter it here.</inlineHelpText>
        <label>Next Test Case</label>
        <referenceTo>TestCase__c</referenceTo>
        <relationshipLabel>Test Cases (Next Test Case)</relationshipLabel>
        <relationshipName>Test_Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If a previous case needs to be completed before testing this one, enter it here.</inlineHelpText>
        <label>Previous Test Case</label>
        <referenceTo>TestCase__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Action__c</fullName>
        <inlineHelpText>Other test case(s) that needs to be completed in order to complete the test action.</inlineHelpText>
        <label>Prior Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Case_Name__c</fullName>
        <label>Test Case Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case_Notes__c</fullName>
        <label>Test Case Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Functional/E2E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UserStoryName__c</fullName>
        <formula>User_Story__r.User_Story_Name__c</formula>
        <label>User Story Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>UserStory__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story_s_Sprint__c</fullName>
        <formula>User_Story__r.Sprint__r.Name</formula>
        <label>User Story&apos;s Sprint</label>
        <type>Text</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TN-{00000}</displayFormat>
        <label>Test Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>